# wheel_legged_robot

./: README.md
hardware/: README.md
hardware/PowerboardGerber/: Drill_PTH_Through.DRL  Drill_PTH_Through_Via.DRL  FlyingProbeTesting.json  Gerber_BoardOutlineLayer.GKO  Gerber_BottomLayer.GBL  Gerber_BottomPasteMaskLayer.GBP  Gerber_BottomSilkscreenLayer.GBO  Gerber_BottomSolderMaskLayer.GBS  Gerber_DocumentLayer.GDL  Gerber_DrillDrawingLayer.GDD  Gerber_TopLayer.GTL  Gerber_TopPasteMaskLayer.GTP  Gerber_TopSilkscreenLayer.GTO  Gerber_TopSolderMaskLayer.GTS
matlab/: README.md  gcGuiReport.mat  leg_conv.m  leg_func_calc.m  leg_pos.m  leg_sim.slx  leg_spd.m  lqr_k.m  lqr_k.prj  sys_calc.m  sys_sim.slx  sys_sim.slx.autosave  sys_sim.slx.original
matlab/codegen/lib/leg_conv/: CMakeLists.txt  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  gcGuiReport.mat  leg_conv.c  leg_conv.h  leg_conv_data.h  leg_conv_initialize.c  leg_conv_initialize.h  leg_conv_terminate.c  leg_conv_terminate.h  leg_conv_types.h  leg_pos.c  leg_pos.h  leg_spd.c  leg_spd.h  lqr_k.c  lqr_k.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_defines.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
matlab/codegen/lib/leg_conv/examples/: main.c  main.h
matlab/codegen/lib/leg_conv/html/: report.mldatx
matlab/codegen/lib/leg_conv/interface/: _coder_leg_conv_api.c  _coder_leg_conv_api.h  _coder_leg_conv_info.c  _coder_leg_conv_info.h  _coder_leg_conv_mex.c  _coder_leg_conv_mex.h
matlab/slprj/_jitprj/: jitEngineAccessInfo.mat  s87amcvx4zWiPIM94Adh4h.l  s87amcvx4zWiPIM94Adh4h.mat  scYwUSFSwb88xIqgZ9BJx0G.l  (+1 more)
software/: README.md
software/WheelLegEmbedded/: .gitignore  .mxproject  WheelLeg.ioc
solidworks/: README.md  轮足零件详单.xlsx
solidworks/轮腿装配图/: 100mm____.STEP.SLDPRT  1_0.stp.STEP.SLDPRT  1mm________.STEP.SLDPRT  1mm轴间垫片.SLDPRT  2_0.stp.STEP.SLDPRT  3_0.stp.STEP.SLDPRT  3mm______.STEP.SLDPRT  3mm__________.STEP.SLDPRT  4_0.stp.STEP.SLDPRT  4mm________.STEP.SLDPRT  4mm轴间垫片.SLDPRT  5mm__________.STEP.SLDPRT  KJ90FT33______-1.STEP.SLDASM  KJ90FT33______.STEP-1.STEP.SLDASM  KJ90FT33______.STEP.SLDASM  KJ90FT33______.STEP.STEP.SLDASM  M2X5_2_1^SG6010C_ASM_252_ASM_1_ASM_SG6010D_asm20240708.stp.STEP.STEP.SLDPRT  M3X22_2_1^SG6010C_ASM_252_ASM_1_ASM_SG6010D_asm20240708.stp.STEP.STEP.SLDPRT  MANIFOLD_SOLID_BREP_439152_1^SG6010C-04_5_ASM_1_ASM_SG6010C_ASM_252_ASM_1_ASM_SG6010D_asm20240708.stp.STEP.STEP.SLDPRT  MANIFOLD_SOLID_BREP_439299_1^SG6010C-04_5_ASM_1_ASM_SG6010C_ASM_252_ASM_1_ASM_SG6010D_asm20240708.stp.STEP.STEP.SLDPRT  NONE_1_1^_X2_897F683C00B79A6C51CF901F753_ASM_SG6010D_asm20240708.stp.STEP.STEP.SLDPRT  SG6010C-01_63_1^SG6010C_ASM_252_ASM_1_ASM_SG6010D_asm20240708.stp.STEP.STEP.SLDPRT  SG6010C-02_27_1^SG6010C_ASM_252_ASM_1_ASM_SG6010D_asm20240708.stp.STEP.STEP.SLDPRT  SG6010C-04_5_ASM_1_ASM^SG6010C_ASM_252_ASM_1_ASM_SG6010D_asm20240708.stp.STEP-1.STEP.SLDASM  SG6010C-04_5_ASM_1_ASM^SG6010C_ASM_252_ASM_1_ASM_SG6010D_asm20240708.stp.STEP-2.STEP.SLDASM  SG6010C-04_5_ASM_1_ASM^SG6010C_ASM_252_ASM_1_ASM_SG6010D_asm20240708.stp.STEP-3.STEP.SLDASM  SG6010C-04_5_ASM_1_ASM^SG6010C_ASM_252_ASM_1_ASM_SG6010D_asm20240708.stp.STEP-4.STEP.SLDASM  SG6010C-04_5_ASM_1_ASM^SG6010C_ASM_252_ASM_1_ASM_SG6010D_asm20240708.stp.STEP-5.STEP.SLDASM  SG6010C-04_5_ASM_1_ASM^SG6010C_ASM_252_ASM_1_ASM_SG6010D_asm20240708.stp.STEP.STEP.SLDASM  SG6010C-21_6_1^SG6010C_ASM_252_ASM_1_ASM_SG6010D_asm20240708.stp.STEP.STEP.SLDPRT  SG6010D_asm20240708.stp-1.STEP-1.STEP.SLDASM  SG6010D_asm20240708.stp-1.STEP-2.STEP.SLDASM  SG6010D_asm20240708.stp-1.STEP-3.STEP.SLDASM  SG6010D_asm20240708.stp-1.STEP-4.STEP.SLDASM  SG6010D_asm20240708.stp-1.STEP-5.STEP.SLDASM  SG6010D_asm20240708.stp-1.STEP.STEP.SLDASM  SG6010D_asm20240708.stp.STEP-1.STEP.SLDASM  SG6010D_asm20240708.stp.STEP-2.STEP.SLDASM  SG6010D_asm20240708.stp.STEP-3.STEP.SLDASM  SG6010D_asm20240708.stp.STEP-4.STEP.SLDASM  (+85 more)
solidworks/轮腿零件step/: 100mm光轴x4.STEP  1mm轴间垫片x2.STEP  3mm厚垫片x2.STEP  3mm避震安装座x2.STEP  4mm轴间垫片x2.STEP  5mm避震安装座x2.STEP  KJ90FT33装配体x2.STEP  下底盘保护x2-碳板.STEP  云台底板x1-碳板.STEP  云台底板方避震x1.STEP  传动轴x2.STEP  传动轴关节电机长29.5x2.STEP  传动轴关节电机长x2.STEP  传动轴垫片x2.STEP  光轴固定座内8x8.STEP  关节电机固定板x2-碳板.STEP  关节电机固定盒x1-碳板.STEP  关节电机固定盒上下x2-碳板.STEP  关节电机固定盒上下内x2-碳板.STEP  关节电机固定盒上长.STEP  内10外18推力球x4.STEP  内10外19厚7法兰21厚1x10.STEP  内10外30厚11导轮x4.STEP  内14.7卡簧.STEP  内16外40高12轴承x4.STEP  内16外40高12轴承若干.STEP  内30外47高9轴承x4.STEP  四方体固定x44.STEP  垂直梁x4.STEP  塞打螺栓D10XM8-16x4.STEP  大腿臂x4-碳板.STEP  守护兽强挡板x1-碳板.STEP  守护兽强挡板短x1-碳板.STEP  小腿臂x2-碳板.STEP  小腿臂x4-碳板.STEP  小腿臂外侧x2.STEP  底盘加强横梁守护兽短.STEP  底盘加强横梁守护兽长.STEP  底盘定位x1-碳板.STEP  底盘定位加悬挂x1.STEP  (+18 more)
(+93 files in other folders)
